[tool.poetry]
name = "clac"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pywin32 = {version = "*", markers = "sys_platform == 'win32'"}
PyAutoGUI = "^0.9.52"
PyInputPlus = "^0.2.12"
lxml = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
